# gk-material

./: .env  .env.example  README.md  pyproject.toml
src/: main.py
src/core/: config.py  models.py  response.py  task_manage.py  task_single.py
src/routers/: default.py  material.py  page.py
src/service/: image_test.py  img_service.py  material.py  materials.py
src/templates/: home.html  upload.html
src/test/: test.py
src/utils/: dir_utils.py  img_utils.py  sse_writer.py  task_utils.py
